# oogc-nmse-converter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/oogc_nmse_converter/: __init__.py  cli.py  converter.py
tests/: test_converter.py
